--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asttokens==2.0.8
+attrs==22.2.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
 certifi==2022.9.14
@@ -9,18 +10,21 @@ debugpy==1.6.3
 decorator==5.1.1
 entrypoints==0.4
 executing==1.0.0
+fastjsonschema==2.16.2
 fonttools==4.37.1
 html5lib==1.1
 idna==3.4
 ipykernel==6.15.3
 ipython==8.5.0
 jedi==0.18.1
+jsonschema==4.17.3
 jupyter-core==4.11.1
 jupyter_client==7.3.5
 kiwisolver==1.4.4
 lxml==4.9.2
 matplotlib==3.5.3
 matplotlib-inline==0.1.6
+nbformat==5.7.3
 nest-asyncio==1.5.5
 numpy==1.23.3
 packaging==21.3
@@ -35,6 +39,7 @@ psycopg2==2.9.5
 pure-eval==0.2.2
 Pygments==2.13.0
 pyparsing==3.0.9
+pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2022.2.1
 pywin32==304
